--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Document</title>
+    <title>Portifólio Eric Douglas F Faria</title>
 </head>
 <body>
     
