--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-
-    <title>Portifólio Eric Douglas F Faria</title>
-</head>
-<body>
-    
-</body>
-</html>
+<h1>Eric Douglas F Faria</h1>
