Configuração de Transmissão

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <a href="https://ericdouglasffaria.github.io/" target="_blank" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon> <span>Ver Projetos</span></a>
 
-      <iframe src="https://player.twitch.tv/?channel=canaleclypse&parent=https://ericdouglasffaria.github.io/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+      <iframe src="https://player.twitch.tv/?channel=canaleclypse&parent=ericdouglasffaria.github.io/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
 
 
       <h2 id="skills-section-title">Minhas Skills</h2>
