--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
       <a href="https://ericdouglasffaria.github.io/" target="_blank" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon> <span>Ver Projetos</span></a>
 
-      <iframe src="https://player.twitch.tv/?channel=canaleclypse&parent=ericdouglasffaria.github.io/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+      <div style="margin: 0 auto; max-width: 700px; margin-bottom: 30px;">
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/live_stream?channel=UCZg0sGuHufCC9J0WeH5buWQ" frameborder="0" allowfullscreen - iframe></iframe>
+      </div>
 
 
       <h2 id="skills-section-title">Minhas Skills</h2>
